tests/NormalTests/paczka1/fuzzy1/21543558.err
Error in line 4: cA65NyRzS1Z S39 78,8
Error in line 8: rPEqiz S711 19,8
Error in line 11: cA65NyRzS1Z S711 158,5
Error in line 26: cA65NyRzS1Z S39 94,6
Error in line 37: rPEqiz S39 65,9
